// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoAboutCharacterPage should add to favorite when click on button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wrapper"
      >
        <div
          class="main"
        >
          <div
            class="infoCard"
          >
            <div
              class="imageWrapper"
            >
              <img
                alt="Rick Sanchez"
                height="300"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
                width="300"
              />
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
              role="alert"
            >
              <div
                class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="SuccessOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
              >
                <div
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
                >
                  Alive
                </div>
                She/He is lucky — 
                <strong>
                  alive!
                </strong>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium css-1sszw6i-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove from favorite
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              >
                <span
                  class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                  style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
                >
                  <span
                    class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                  />
                </span>
              </span>
            </button>
            <div>
              <div
                class="accordion"
              >
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Last known location
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Citadel of Ricks
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Gender
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Male
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Origin
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Earth (C-137)
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Species
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Human
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              We will meet 
              Rick Sanchez
               in the episode: 
            </div>
            <span
              style="padding: 20px; text-align: center;"
            >
              Error to loading episodes
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wrapper"
    >
      <div
        class="main"
      >
        <div
          class="infoCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Rick Sanchez"
              height="300"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              width="300"
            />
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
            role="alert"
          >
            <div
              class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                data-testid="SuccessOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
            >
              <div
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
              >
                Alive
              </div>
              She/He is lucky — 
              <strong>
                alive!
              </strong>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium css-1sszw6i-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Remove from favorite
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            >
              <span
                class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
              >
                <span
                  class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                />
              </span>
            </span>
          </button>
          <div>
            <div
              class="accordion"
            >
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Last known location
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Citadel of Ricks
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Gender
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Male
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Origin
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Earth (C-137)
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Species
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Human
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card-header"
          >
            We will meet 
            Rick Sanchez
             in the episode: 
          </div>
          <span
            style="padding: 20px; text-align: center;"
          >
            Error to loading episodes
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InfoAboutCharacterPage should remove from favorites 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wrapper"
      >
        <div
          class="main"
        >
          <div
            class="infoCard"
          >
            <div
              class="imageWrapper"
            >
              <img
                alt="Rick Sanchez"
                height="300"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
                width="300"
              />
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
              role="alert"
            >
              <div
                class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="SuccessOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
              >
                <div
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
                >
                  Alive
                </div>
                She/He is lucky — 
                <strong>
                  alive!
                </strong>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium css-ke5b6m-MuiButtonBase-root-MuiButton-root"
              data-testid="btn-favorite"
              tabindex="0"
              type="button"
            >
              Add to favorite
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div>
              <div
                class="accordion"
              >
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Last known location
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Citadel of Ricks
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Gender
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Male
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Origin
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Earth (C-137)
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Species
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Human
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              We will meet 
              Rick Sanchez
               in the episode: 
            </div>
            <span
              style="padding: 20px; text-align: center;"
            >
              Error to loading episodes
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wrapper"
    >
      <div
        class="main"
      >
        <div
          class="infoCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Rick Sanchez"
              height="300"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              width="300"
            />
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
            role="alert"
          >
            <div
              class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                data-testid="SuccessOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
            >
              <div
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
              >
                Alive
              </div>
              She/He is lucky — 
              <strong>
                alive!
              </strong>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium css-ke5b6m-MuiButtonBase-root-MuiButton-root"
            data-testid="btn-favorite"
            tabindex="0"
            type="button"
          >
            Add to favorite
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <div>
            <div
              class="accordion"
            >
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Last known location
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Citadel of Ricks
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Gender
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Male
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Origin
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Earth (C-137)
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Species
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Human
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card-header"
          >
            We will meet 
            Rick Sanchez
             in the episode: 
          </div>
          <span
            style="padding: 20px; text-align: center;"
          >
            Error to loading episodes
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InfoAboutCharacterPage should render properly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="wrapper"
      >
        <div
          class="main"
        >
          <div
            class="infoCard"
          >
            <div
              class="imageWrapper"
            >
              <img
                alt="Rick Sanchez"
                height="300"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
                width="300"
              />
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
              role="alert"
            >
              <div
                class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                  data-testid="SuccessOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
              >
                <div
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
                >
                  Alive
                </div>
                She/He is lucky — 
                <strong>
                  alive!
                </strong>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium css-ke5b6m-MuiButtonBase-root-MuiButton-root"
              data-testid="btn-favorite"
              tabindex="0"
              type="button"
            >
              Add to favorite
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div>
              <div
                class="accordion"
              >
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Last known location
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Citadel of Ricks
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Gender
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Male
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Origin
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Earth (C-137)
                    </div>
                  </div>
                </div>
                <div
                  class="accordion-item"
                >
                  <h2
                    class="accordion-header"
                  >
                    <button
                      aria-expanded="false"
                      class="accordion-button collapsed"
                      type="button"
                    >
                      Species
                    </button>
                  </h2>
                  <div
                    class="accordion-collapse collapse"
                  >
                    <div
                      class="accordion-body"
                    >
                      Human
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="card-header"
            >
              We will meet 
              Rick Sanchez
               in the episode: 
            </div>
            <span
              style="padding: 20px; text-align: center;"
            >
              Error to loading episodes
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="wrapper"
    >
      <div
        class="main"
      >
        <div
          class="infoCard"
        >
          <div
            class="imageWrapper"
          >
            <img
              alt="Rick Sanchez"
              height="300"
              src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              width="300"
            />
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardSuccess MuiAlert-standard css-efvcc7-MuiPaper-root-MuiAlert-root"
            role="alert"
          >
            <div
              class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                data-testid="SuccessOutlinedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                />
              </svg>
            </div>
            <div
              class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
            >
              <div
                class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
              >
                Alive
              </div>
              She/He is lucky — 
              <strong>
                alive!
              </strong>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium css-ke5b6m-MuiButtonBase-root-MuiButton-root"
            data-testid="btn-favorite"
            tabindex="0"
            type="button"
          >
            Add to favorite
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <div>
            <div
              class="accordion"
            >
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Last known location
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Citadel of Ricks
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Gender
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Male
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Origin
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Earth (C-137)
                  </div>
                </div>
              </div>
              <div
                class="accordion-item"
              >
                <h2
                  class="accordion-header"
                >
                  <button
                    aria-expanded="false"
                    class="accordion-button collapsed"
                    type="button"
                  >
                    Species
                  </button>
                </h2>
                <div
                  class="accordion-collapse collapse"
                >
                  <div
                    class="accordion-body"
                  >
                    Human
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card-header"
          >
            We will meet 
            Rick Sanchez
             in the episode: 
          </div>
          <span
            style="padding: 20px; text-align: center;"
          >
            Error to loading episodes
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
